Remove a recipe, add steps and ingredients to rest

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Egyptian Eats</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <a href="recipes/bamya.html">Bamya</a>
-    <a href="recipes/hawawshi.html">Hawawshi</a>
-    <a href="recipes/koshary.html">Koshary</a>
-    <a href="recipes/molokhiya.html">Molokhiya</a>
+    <h1>Egyptian Eats</h1>
+    <p><a href="recipes/hawawshi.html" target="_blank" rel="noreferrer">Hawawshi</a></p>
+    <p><a href="recipes/koshary.html" target="_blank" rel="noreferrer">Koshary</a></p>
+    <p><a href="recipes/molokhiya.html" target="_blank" rel="noreferrer">Molokhiya</a></p>
 </body>
 </html>
