--- a/recipes/hawawshi.html
+++ b/recipes/hawawshi.html
@@ -3,9 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Hawawshi | Egyptian Eats</title>
 </head>
 <body>
     <h1>Hawawshi</h1>
+    <img src="../img/hawawshi.jpg" alt="Hawawshi" width="400" height="350">
+    <h2>Description</h2>
+    <p>Hawawshi is a delicious Egyptian dish that consists of spiced ground meat, 
+        usually beef or lamb, stuffed inside a pocket of dough and baked or 
+        grilled to perfection. The meat is seasoned with a blend of aromatic 
+        spices such as cumin, coriander, and paprika, giving it a rich and 
+        savory flavor. The dough encasing the meat becomes crispy on the outside 
+        while remaining soft and fluffy on the inside, creating a delightful 
+        contrast in textures. Hawawshi is often served with tahini sauce, pickles, 
+        and a side salad, making it a satisfying and flavorful meal that is 
+        enjoyed by many in Egypt. Its simple yet comforting taste makes it a 
+        popular choice for lunch or dinner, and it is sure to be a crowd-pleaser 
+        for anyone looking to experience the authentic flavors of Egyptian cuisine.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>3 baladi bread (or pita pockets)</li>
+        <li>1/4 large onion (or 1/2 of a small/medium onion), finely chopped</li>
+        <li>1/4 green pepper, finely chopped</li>
+        <li>1/2 tomato, finely chopped</li>
+        <li>1 small clove garlic, minced</li>
+        <li>1/2 lb ground beef (80% - don't use lean for this)</li>
+        <li>2 Tbsp chopped parsley</li>
+        <li>1/2 tsp salt</li>
+        <li>1/4 tsp coriander</li>
+        <li>1/4 tsp cumin</li>
+        <li>1/8 tsp paprika</li>
+        <li>1/8 tsp allspice</li>
+        <li>1/8 tsp cinnamon</li>
+        <li>1/8 tsp cardamom</li>
+        <li>1/8 tsp pepper</li>
+    </ul>      
+    <h2>Steps</h2>
+    <ol>
+        <li>Preheat the oven to 400F. Brush a large baking sheet with a little oil.</li>
+        <li>Either cut the bread rounds in half, or cut a slit along the edge on one side, around 2 inches in length.</li>
+        <li>Finley chop the onion, pepper, and tomato, and crush or finely chop the garlic.</li>
+        <li>Mix together the ground beef, onion, pepper, tomato, garlic, parsley, and spices. Mix everything well so the ingredients are well-distributed - this is often easiest done by hand.</li>
+        <li>Divide the mixture between the bread rounds and fill as far as possible, taking care not to break the bread. Spread the filling relatively evenly towards the edges.</li>
+        <li>Place the filled bread on the baking sheet and brush both sides of the bread with a little oil.</li>
+        <li>Bake in the preheated oven for approximately 15 minutes, then turn and bake for another 5 minutes, approximately, until the bread is browned and gently crisp on both sides and the meat is cooked through. (The center of the filling should register 150-155F when with a thermometer.)</li>
+        <li>Best served warm, or they can be served at room temperature. Typically served with tahini sauce on the side to dip.</li>
+    </ol>  
+    <a href="https://www.curiouscuisiniere.com/hawawshi/" target="_blank" rel="noreferrer">Recipe source</a>    
 </body>
 </html>
