--- a/recipes/molokhiya.html
+++ b/recipes/molokhiya.html
@@ -3,9 +3,42 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Molokhiya | Egyptian Eats</title>
 </head>
 <body>
     <h1>Molokhiya</h1>
+    <img src="../img/molokhiya.jpg" alt="Molokhiya" width="450" height="250">
+    <h2>Description</h2>
+    <p>Molokhiya, also known as Egyptian spinach, is a traditional Egyptian dish 
+        that is both nutritious and flavorful. The main ingredient of this 
+        dish is the leaves of the molokhiya plant, which are finely chopped and 
+        cooked to create a thick, green, and slightly slimy stew. The stew is typically 
+        flavored with garlic, coriander, and sometimes chicken or meat broth for added 
+        richness. Molokhiya is often served over rice or with bread, and it is a popular 
+        choice for family meals and gatherings in Egypt. Its unique taste and texture 
+        make it a beloved dish in Egyptian cuisine, and it is sure to be a hit with 
+        anyone looking to explore new flavors and culinary traditions.</p>
+    <h2>Ingredients</h2>
+    <ul>
+        <li>3 ½ cups chicken broth</li>
+        <li>1 Tbs chicken bouillon</li>
+        <li>14 oz frozen minced molokhia leaves (aka jute leaves)</li>
+        <li>2 Tbs butter</li>
+        <li>5 cloves minced garlic</li>
+        <li>½ tsp salt</li>
+        <li>½ tsp pepper</li>
+    </ul>
+    <h2>Steps</h2>
+    <ol>
+        <li>Add the chicken broth and bouillon to a large pot. Heat on high until boiling</li>
+        <li>Add the frozen molokhia leaves to the boiling pot</li>
+        <li>Mix and allow the leaves to melt completely and come to a boil again</li>
+        <li>In a small frying pan, melt the butter on medium heat</li>
+        <li>Add the minced garlic, salt and pepper. Fry the garlic in the butter for about 2-3 minutes until lightly browned</li>
+        <li>Pour the garlic mixture into the pot with the molokhia</li>
+        <li>Mix well and let the molokhia boil for another 2-3 minutes before turning off heat</li>
+        <li>Serve with rice and chicken. Enjoy!</li>
+    </ol>
+    <a href="https://eyesclosedcooking.com/blog/egyptian-molokhia-recipe" target="_blank" rel="noreferrer">Recipe source</a>
 </body>
 </html>
