Add boilerplate to all files

--- a/index.html
+++ b/index.html
@@ -7,5 +7,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="recipes/bamya.html">Bamya</a>
+    <a href="recipes/hawawshi.html">Hawawshi</a>
+    <a href="recipes/koshary.html">Koshary</a>
+    <a href="recipes/molokhiya.html">Molokhiya</a>
 </body>
 </html>
